2008-07-16 Braden McDaniel  <braden@endoframe.com>

	* examples/sdl_viewer.cpp (resource_fetcher::do_get_resource(const
	std::string &)): Added a comment to note that no translation of
	URI-encoded characters is being done.

2008-06-27 Braden McDaniel  <braden@endoframe.com>

	Added parentheses to quell warnings from gcc 4.3.

	* src/libopenvrml/openvrml/x3d_vrml_grammar.h
	* src/libopenvrml/openvrml/vrml97_grammar.h

2008-06-27 Braden McDaniel  <braden@endoframe.com>

	Factored platform-specifc getcwd logic out of create_file_url.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml_getcwd()): Wrapper function for getcwd on POSIX and
	GetCurrentDirectory on Windows.
	(create_file_url(const uri &)): Delegate to openvrml_getcwd.

2008-06-24 Braden McDaniel  <braden@endoframe.com>

	Use native DLL loading facilities on Windows instead of libltdl.

	* src/libopenvrml/openvrml/browser.cpp
	* ide-projects/Windows/VisualC9_0/OpenVRML/javascript/javascript.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/OpenVRML.sln

2008-06-18 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj:
	Updated FreeType dependency to 2.3.6; ignore default library
	"msvcrt" in the Debug configuration.

2008-06-17 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.6 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* mozilla-plugin/configure.ac
	* src/Makefile.am: Updated libopenvrml libtool library version to
	8:5:0.

2008-06-16 Braden McDaniel  <braden@endoframe.com>

	If the node hasn't been initialized, we can't use the scene
	pointer.  Modified update_textures functions to return without
	doing anything if the node hasn't yet been initialized.

	* src/node/vrml97/background.cpp